Tue May 27 17:47:25 2003  George Lebl <jirka@5z.com>

	* src/gnome-genius.c: implement open file, mark changed files
	  as changed, the toolbar has now open and not load and load label
	  changed to "Load and Run" to be clear

Tue May 27 16:59:54 2003  George Lebl <jirka@5z.com>

	* src/Makefile.am, src/lexer.[lh], src/calc.[chl, src/gnome-genius.c,
	  src/genius.c:  The my_yy_ functions are now gel_lexer_ functions
	  and lexer.l is installed.

	* src/gnome-genius.c: Implement tabs as programs using text view,
	  and allow running of these tabs as programs with output to main
	  console.  No openning/saving functionality yet.

Tue May 27 14:18:52 2003  George Lebl <jirka@5z.com>

	* lib/misc/misc.gel: add Compose function to compose two functions

Tue May 27 14:07:16 2003  George Lebl <jirka@5z.com>

	* lib/number_theory/modulus.gel: add IndexCalculus,
	  IndexCalculusPrecalculation, FindPrimitiveElementMod and
	  FindRandomPrimitiveElementMod functions that I did for class
	  a while back.

Tue May 27 13:11:00 2003  George Lebl <jirka@5z.com>

	* src/mpwrap.[ch]: fix the gmp accessors

	* src/mpzextra.[ch], src/funclib.c, lib/number_theory/factoring.gel:
	  snarf the Pollard-Rho implementation from gmp examples and use it
	  for a built in version of Factorize, and whack the gel one and
	  also whack FactorizeLoopMax as it doesn't make sense now.  Also
	  add possibility to interrupt the primality tests (except when
	  inside mpz_millerrabin).

	* src/eval.c: if an interruption is raised during a built in
	  function call, then raise exception.

Wed May 21 16:42:05 2003  George Lebl <jirka@5z.com>

	* src/mpwrap.c: the int power functions were stupid and weren't
	  working for greater then ulong powers anyway.  So for the floating
	  one convert to a float if the power is too big, for the integer
	  one just make an error, since the number would be too big to be
	  useful (as an integer of course)

Wed May 21 16:06:28 2003  George Lebl <jirka@5z.com>
