@@ -1,3 +1,9 @@
+Wed May 28 10:17:10 2003  George Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c: cleanup the program stuff a bit, add a programs
+	  menu and make selected program stick even if you switch to console
+	  to be able to run multiple times easily.
+
 Tue May 27 17:47:25 2003  George Lebl <jirka@5z.com>
 
 	* src/gnome-genius.c: implement open file, mark changed files
